tests/errors/compiler/par_type_void_with_nofun/void_arg_in_func_def.c
int func(void a)
{
	return 0;
}

void main()
{

}
